[project]
name = "appyter"
version = "0.21.0"
description = "This module enables you to turn your jupyter notebook into a jinja2 template-driven web application."
authors = [
    {name = "Daniel Clarke",email = "u8sand@gmail.com"}
]
license = {text = "CC-BY-NC-SA-4.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: Jupyter"
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "aiohttp-wsgi (>=0.10.0,<0.11.0)",
    "aiohttp-remotes (>=1.3.0,<2.0.0)",
    "ipython (<9.3)",
    "bs4 (>=0.0.2,<0.0.3)",
    "click (<8.2)",
    "click-default-group (>=1.2.4,<2.0.0)",
    "flask-cors (<6)",
    "flask (>=3.1.1,<4.0.0)",
    "fsspec (>=2025.5.1,<2026.0.0)",
    "fusepy (>=3.0.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "jupyter-client (>=8.6.3,<9.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "nbclient (>=0.10.2,<0.11.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-engineio (>=4.12.2,<5.0.0)",
    "python-socketio (>=5.13.0,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "watchgod (>=0.8.2,<0.9.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "yarl (>=1.20.1,<2.0.0)"
]

[project.optional-dependencies]
appyter_init = ["cookiecutter (>=2.6.0,<3.0.0)"]
production = ["aiobotocore (>=2.23.0,<3.0.0)", "kubernetes (>=33.1.0,<34.0.0)", "s3fs (>=2025.5.1,<2026.0.0)", "supervisor (>=4.2.5,<5.0.0)"]
docs = ["sphinx-mdinclude (<0.6.2)", "sphinx (<8)"]
doc = []


[tool.poetry]
include = [
    { path = "VERSION", format = ["sdist", "wheel"] },
    { path = "*.j2", format = ["sdist", "wheel"] },
    { path = "*.js", format = ["sdist", "wheel"] },
    { path = "*.css", format = ["sdist", "wheel"] },
    { path = "*.eot", format = ["sdist", "wheel"] },
    { path = "*.svg", format = ["sdist", "wheel"] },
    { path = "*.ttf", format = ["sdist", "wheel"] },
    { path = "*.woff", format = ["sdist", "wheel"] },
    { path = "*.woff2", format = ["sdist", "wheel"] },
    { path = "helpers/cookiecutter/**", format = ["sdist", "wheel"] }
]
exclude = [
    { path = "*.pyc" },
    { path = "*.vscode" }
]

[tool.poetry.scripts]
appyter = 'appyter.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
